--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,11 @@ img {
 	max-width: 300px;
 	border-radius: 5px;
 }
+
 ul {
 	list-style: none;
 }
+
 li {
 	background-color: lightgrey;
 	border-radius: 5px;
@@ -12,13 +14,20 @@ li {
 	margin: 5px;
 	width: 100px;
 }
+
 li:hover {
 	background-color: grey;
 }
+
 body {
 	display: flex;
 	justify-content: center;
 }
+
 span {
 	margin: 50px;
+}
+
+form {
+	visibility: hidden;
 }
